# serial_mcp

./: .gitignore  README.md  pyproject.toml
serial_shell_mcp/: server.py
