[project]
name = "serial-shell-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastmcp>=3.1.0", "labgrid>=25.0.1", "pydantic>=2.12.5"]

[project.scripts]
serial-shell-mcp = "serial_shell_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
